tests/trybuild_tests_src/beta/nonzeroable_fields.stderr
error[E0277]: the trait bound `&'static str: Zeroable` is not satisfied
 --> $DIR/nonzeroable_fields.rs:5:39
  |
3 | #[derive(Zeroable)]
  |          -------- required by this bound in `assert_impl`
4 | #[repr(transparent)]
  | - required by a bound in this
5 | struct NonZeroableField { _bad_field: &'static str }
  |                                       ^^^^^^^^^^^^ the trait `Zeroable` is not implemented for `&'static str`
